Issue #47. Update readme.